[tool.poetry]
name = "klatkabot"
version = "0.1.0"
description = ""
authors = ["Jakub Wilk <wilkjakub64@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
python-dotenv = "^0.19.2"
PyNaCl = "^1.4.0"
py-cord = "^2.4.1"
requests = "^2.27.1"
montydb = "^2.5.0"
validators = "^0.20.0"
yt-dlp = "^2023.2.17"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
